Badges added onto navbar

--- a/accounts/templates/account/password_set.html
+++ b/accounts/templates/account/password_set.html
@@ -21,6 +21,6 @@
           {% endif %}
         </div>
       {% endfor %}
-    <button class="btn btn-default" type="submit" name="action">{% trans "Set Password" %}</button>
+    <button class="btn btn-outline-secondary" type="submit" name="action">{% trans "Set Password" %}</button>
     </form>
 {% endblock %}
