--- a/home/templates/add_playlist.html
+++ b/home/templates/add_playlist.html
@@ -14,6 +14,6 @@
             {{ field }}
           </div>
         {% endfor %}
-        <button type="submit" class="btn btn-default">Save</button>
+        <button type="submit" class="btn btn-outline-secondary">Save</button>
     </form>
 {% endblock %} 
