--- a/accounts/templates/account/login.html
+++ b/accounts/templates/account/login.html
@@ -14,12 +14,15 @@
     {% endfor %}
     {% if errors %}
     {% for error in errors %}
-    <div class="alert alert-danger">
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
       {{ error }}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
     </div>
     {% endfor %}
     {% endif %}
-    <button type="submit" class="btn btn-default">Login</button>
-    <a href="{% provider_login_url 'google' %}"><button type="button" class="btn btn-default">With Google</button></a>
+    <button type="submit" class="btn btn-outline-secondary">Login</button>
+    <a href="{% provider_login_url 'google' %}"><button type="button" class="btn btn-outline-secondary">With Google</button></a>
   </form>
 {% endblock %}
