--- a/accounts/templates/account/password_change.html
+++ b/accounts/templates/account/password_change.html
@@ -19,6 +19,6 @@
           {% endif %}
         </div>
       {% endfor %}
-    <button class="btn btn-default" type="submit" name="action">{% trans "Change Password" %}</button>
+    <button class="btn btn-outline-secondary" type="submit" name="action">{% trans "Change Password" %}</button>
     </form>
 {% endblock %}
