--- a/accounts/templates/account/password_reset.html
+++ b/accounts/templates/account/password_reset.html
@@ -16,12 +16,17 @@
           {{ field }}
           {% if field.errors %}
           <br>
-          <div class="alert alert-danger">
-            {{field.errors}}
+          {% for error in field.errors %}
+          <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            {{ error }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
+          {% endfor %}
           {% endif %}
         </div>
       {% endfor %}
-    <button class="btn btn-default" type="submit" name="action">{% trans "Send Email" %}</button>
+    <button class="btn btn-outline-secondary" type="submit" name="action">{% trans "Send Email" %}</button>
     </form>
 {% endblock %} 
