--- a/accounts/templates/account/password_reset_from_key.html
+++ b/accounts/templates/account/password_reset_from_key.html
@@ -20,6 +20,6 @@
           {% endif %}
         </div>
       {% endfor %}
-    <button class="btn btn-default" type="submit" name="action">{% trans "Change password" %}</button>
+    <button class="btn btn-outline-secondary" type="submit" name="action">{% trans "Change password" %}</button>
     </form>
 {% endblock %} 
