--- a/accounts/templates/account/signup.html
+++ b/accounts/templates/account/signup.html
@@ -11,9 +11,14 @@
         {{ field }}
         {% if field.errors %}
         <br>
-        <div class="alert alert-danger">
-          {{field.errors}}
+        {% for error in field.errors %}
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+          {{ error }}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
+        {% endfor %}
         {% endif %}
       </div>
     {% endfor %}
@@ -21,7 +26,7 @@
     <div class="checkbox">
       <label><input type="checkbox" name="remember"> Accept <a href="" style="color: rgb(41, 41, 41);">privacy</a></label>
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
-    <button type="reset" class="btn btn-default">Reset</button>
+    <button type="submit" class="btn btn-outline-secondary">Submit</button>
+    <button type="reset" class="btn btn-outline-secondary">Reset</button>
   </form>
 {% endblock %}
