Done with bootstrap 4 design for home page

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -109,7 +109,7 @@
         <form class="form-inline my-2 my-lg-0" action="{% url 'home_target_n' 'search_paylists' %}" method="POST">
           {% csrf_token %}
           <input type="text" required name="playlists_keys" class="form-control mr-sm-2" placeholder="Search playlist">
-          <button type="submit" class="btn btn-outline-secondary my-2 my-sm-0">Search</button>
+          <button type="submit" class="btn btn-outline-success my-2 my-sm-0">Search</button>
         </form> 
       </div>
     </div>
