Edit playlist refactoring
Comments and docstrings + js script separated from html

--- a/accounts/templates/account/login.html
+++ b/accounts/templates/account/login.html
@@ -23,6 +23,6 @@
     {% endfor %}
     {% endif %}
     <button type="submit" class="btn btn-outline-secondary">Login</button>
-    <a href="{% provider_login_url 'google' %}"><button type="button" class="btn btn-outline-secondary">With Google</button></a>
+    <a href="{% provider_login_url 'google' %}"><button type="button" class="btn btn-outline-light" style="color:rgb(221, 74, 16); border-color: rgb(221, 74, 16);">With Google</button></a>
   </form>
 {% endblock %}
