Show amount of inheritences in show_playlist page

--- a/home/templates/show_playlist.html
+++ b/home/templates/show_playlist.html
@@ -40,6 +40,10 @@
             </svg>
           </div>
           <div class="d-inline-block" id="dislike{{ playlist.id }}_amount">{{ playlist.dislikes }}</div>
+          <div style="margin-top: 15px;">
+            <img src="https://img.icons8.com/flat_round/23/000000/star--v1.png" />
+            {{ playlist.inheritences_amount }}
+          </div>
         </p>
         <h3>Links</h3>
         <input class="form-control" id="myInput" type="text" placeholder="Search..">
