--- a/accounts/templates/account/email_confirm.html
+++ b/accounts/templates/account/email_confirm.html
@@ -16,7 +16,7 @@
 
 <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
 {% csrf_token %}
-    <button type="submit" class="btn btn-default">{% trans 'Confirm' %}</button>
+    <button type="submit" class="btn btn-outline-secondary">{% trans 'Confirm' %}</button>
 </form>
 
 {% else %}
