--- a/app/accounts/templates/account/signup.html
+++ b/app/accounts/templates/account/signup.html
@@ -24,7 +24,7 @@
     {% endfor %}
 
     <div class="checkbox">
-      <label><input type="checkbox" name="remember"> Accept <a href="" style="color: rgb(41, 41, 41);">privacy</a></label>
+      <label><input required type="checkbox" name="remember"> Accept <a href="{% url 'home_n' %}#privacy" style="color: rgb(41, 41, 41);">privacy</a></label>
     </div>
     <button type="submit" class="btn btn-outline-secondary">Submit</button>
     <button type="reset" class="btn btn-outline-secondary">Reset</button>
