--- a/app/playlists/templates/add_playlist.html
+++ b/app/playlists/templates/add_playlist.html
@@ -10,11 +10,11 @@
   <form action="{% url 'add_new_playlist_n' %}" method="POST">
     {% csrf_token %}
     <div class="form-group"><label for="id_title"><label for="id_title">Title:</label></label> <input v-model="title" type="text"
-      name="title" maxlength="50" placeholder="Enter title" required="required" id="id_title" class="form-control">
+      autocomplete="off" name="title" maxlength="50" placeholder="Enter title" required="required" id="id_title" class="form-control">
     </div>
     <div class="form-group"><label for="id_description"><label for="id_description">Description:</label></label> <input
       v-model="description" type="text" name="description" maxlength="1024" placeholder="Enter description" id="id_description"
-      class="form-control"></div>
+      autocomplete="off" class="form-control"></div>
     <div class="form-group float-right"><label for="id_is_private">
       <label for="body">Background</label>
       <input v-model:value="color" type="color" id="color" name="color" value="#F7F7F7">
